Closed
Bug 518686
Opened 16 years ago
Closed 16 years ago
crash [@ nsMsgI18NConvertToUnicode(char const*, nsCString const&, nsAString_internal&, int)]
Categories
(MailNews Core :: MIME, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
Thunderbird 3.0rc1
People
(Reporter: wsmwk, Assigned: smontagu)
Details
(Keywords: crash, intl)
Crash Data
Attachments
(1 file)
1.42 KB,
patch
|
standard8
:
review+
standard8
:
superreview+
standard8
:
approval-thunderbird3+
|
Details | Diff | Splinter Review |
crash [@ nsMsgI18NConvertToUnicode(char const*, nsCString const&, nsAString_internal&, int)]
a few 3.0b4pre, 3.0b3pre, 3.1a1pre, etc
unlikely to become a topcrash, but currently #10 for 3.0b4
bp-6588d6b6-e329-4408-ad99-a74c22090909
"I'm trying to open MHTML file as EML file..."
0 thunderbird.exe nsMsgI18NConvertToUnicode mailnews/base/util/nsMsgI18N.cpp:138
1 thunderbird.exe nsMsgI18NConvertRawBytesToUTF8 mailnews/base/util/nsMsgI18N.cpp:598
2 thunderbird.exe MimeHeaders_convert_header_value mailnews/mime/src/mimehdrs.cpp:75
3 thunderbird.exe MimeHeaders_write_all_headers mailnews/mime/src/mimehdrs.cpp:615
4 thunderbird.exe MimeMessage_write_headers_html mailnews/mime/src/mimemsg.cpp:757
5 thunderbird.exe MimeMessage_close_headers mailnews/mime/src/mimemsg.cpp:428
6 thunderbird.exe MimeMessage_parse_line mailnews/mime/src/mimemsg.cpp:277
7 thunderbird.exe convert_and_send_buffer mailnews/mime/src/mimebuf.cpp:184
8 thunderbird.exe mime_LineBuffer mailnews/mime/src/mimebuf.cpp:272
9 thunderbird.exe MimeObject_parse_buffer mailnews/mime/src/mimeobj.cpp:275
10 thunderbird.exe mime_display_stream_write mailnews/mime/src/mimemoz2.cpp:949
11 thunderbird.exe nsStreamConverter::OnDataAvailable mailnews/mime/src/nsStreamConverter.cpp:957
12 thunderbird.exe nsDocumentOpenInfo::OnDataAvailable uriloader/base/nsURILoader.cpp:306
13 thunderbird.exe nsMailboxProtocol::ReadMessageResponse mailnews/local/src/nsMailboxProtocol.cpp:585
but also seen during startup. for example bp-d49b8b5a-ac24-4b26-81cd-9f14f2090917
bp-
Assignee | ||
Comment 1•16 years ago
|
||
Assignee: nobody → smontagu
Attachment #403099 -
Flags: superreview?(bugzilla)
Attachment #403099 -
Flags: review?(bugzilla)
Assignee | ||
Updated•16 years ago
|
Attachment #403099 -
Attachment is patch: true
Attachment #403099 -
Attachment mime type: application/octet-stream → text/plain
Updated•16 years ago
|
Attachment #403099 -
Flags: superreview?(bugzilla)
Attachment #403099 -
Flags: superreview+
Attachment #403099 -
Flags: review?(bugzilla)
Attachment #403099 -
Flags: review+
Attachment #403099 -
Flags: approval-thunderbird3+
Reporter | ||
Comment 2•16 years ago
|
||
should we want a test for this?
FWIW, holding steady at #14, solidly in top 20 for 3.0b4
Assignee | ||
Comment 3•16 years ago
|
||
Status: NEW → RESOLVED
Closed: 16 years ago
Flags: in-testsuite?
Resolution: --- → FIXED
Updated•16 years ago
|
Target Milestone: --- → Thunderbird 3.0rc1
Reporter | ||
Comment 4•15 years ago
|
||
appears to be fixed ... this crash does not appear in version 3.0.0 per http://crash-stats.mozilla.com/query/query?product=Thunderbird&version=ALL%3AALL&date=01%2F10%2F2010&range_value=4&range_unit=weeks&query_search=signature&query_type=exact&query=nsMsgI18NConvertToUnicode%28char+const*%2C+nsCString+const%26%2C+nsAString_internal%26%2C+int%29&build_id=&do_query=1# the 3 crashes in the list are eudora versions that are based on thunderbird 3.0b4, which doesn't contain this patch
And depending on which attachment Philippp used in bug 232275 comment 23, we may know whether the bug 232275 comment 18 / attachment 220918 [details] testcase also doesn't crash.
Status: RESOLVED → VERIFIED
Keywords: intl
Updated•14 years ago
|
Crash Signature: [@ nsMsgI18NConvertToUnicode(char const*, nsCString const&, nsAString_internal&, int)]
You need to log in
before you can comment on or make changes to this bug.
Description
•