Replace default charset by mail charset when it is null. Bug 518686, r+sr+approval-tb3=Standard8