mailnews/mime/src/mimemsg.cpp
@@ -741,10 +741,12 @@ MimeMessage_write_headers_html (MimeObject *obj)
 
   // Change the default_charset by the charset of the original message
   // ONLY WHEN THE CHARSET OF THE ORIGINAL MESSAGE IS NOT US-ASCII
-  // ("ISO-8859-1") and defailt_charset and mailCharset are different.
-  if ( (mailCharset) && (PL_strcasecmp(mailCharset, "US-ASCII")) &&
-       (PL_strcasecmp(mailCharset, "ISO-8859-1")) &&
-       (PL_strcasecmp(obj->options->default_charset, mailCharset)) &&
+  // ("ISO-8859-1") and default_charset and mailCharset are different,
+  // or when there is no default_charset (this can happen with saved messages).
+  if ( (!obj->options->default_charset ||
+        ((mailCharset) && (PL_strcasecmp(mailCharset, "US-ASCII")) &&
+         (PL_strcasecmp(mailCharset, "ISO-8859-1")) &&
+         (PL_strcasecmp(obj->options->default_charset, mailCharset)))) &&
        !obj->options->override_charset )
   {
     PR_FREEIF(obj->options->default_charset);
